style.css
body {
	background:#fff;
  	width:100%;
  	height:100%;
	color:#1c1d22;
  	margin:0;
  	padding:0;
  	cursor:default;
}

#ui #divider {
	display:none;
	position:fixed;
	background:#18181b;
	width:100%;
	height:8px;
	top:50%;
	left:20%;
	border-bottom:1px solid #fff;
}

#ui .label {
	position:fixed;
	width:200px;
	height:200px;
	left:2%;
	color:#fff;
	font-family:"Helvetica","Arial",sans-serif;
	/*font-size:72px;*/
	font-weight:bold;
	text-align:center;
	text-transform:uppercase;
	-webkit-transform: rotate(-90deg);
	-moz-transform: rotate(-90deg);
	-ms-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}
#ui .label#left {
	bottom:100px;
}
#ui .label#right {
	top:100px;
}

/*#ui .arr {
	position:fixed;
	left:3%;
	font-size:86px;
}
#ui .arr.left {
	bottom:131px;
}
#ui .arr.right {
	top:131px;
}*/

canvas {
	background:transparent;
	position:absolute;
}

